# format

./: .gitignore  CMakeLists.txt  README.md  compat_format.hpp  compat_format_v1.h  main.cpp
tests/: gtest_main.cpp
